beta17向けベータ17

--- a/trunk/release/keys.htm
+++ b/trunk/release/keys.htm
@@ -183,10 +183,15 @@
     <td width="75%" height="16">ツリーを表示します。</td>
   </tr>
   <tr>
-    <td width="11%" height="64" rowspan="4">検索関係</td>
+    <td width="11%" height="64" rowspan="5">検索関係</td>
     <td width="27%" height="1">Find</td>
     <td width="1%" height="1">F, F7</td>
     <td width="75%" height="1">入力された名前を含むファイルを検索します。<b>チェックボックスを切り替えることで、サブディレクトリの中のファイルも検索対称にすることが出来ます。</b></td>
+  </tr>
+  <tr>
+    <td width="27%" height="1"><b>タグ検索</b></td>
+    <td width="1%" height="1"><b>Shift+F</b></td>
+    <td width="75%" height="1"><b>入力されたタグでファイルを検索します。</b></td>
   </tr>
   <tr>
     <td width="27%" height="16"><b>Grep</b></td>
@@ -204,7 +209,7 @@
     <td width="75%" height="16"><b>前回と同じ文字でインクリメンタルサーチを行います。Ctrl+↑なら前の、Ctrl+↓なら次のファイルを選択します。また、その後インクリメンタルサーチの続きを入力できます。</b></td>
   </tr>
   <tr>
-    <td width="11%" height="256" rowspan="9">ファイル操作</td>
+    <td width="11%" height="256" rowspan="10">ファイル操作</td>
     <td width="27%" height="32">ファイル作成</td>
     <td width="1%" height="32">N</td>
     <td width="75%" height="32">新しいファイルを作成します。</td>
@@ -248,6 +253,11 @@
     <td width="27%" height="16">解凍</td>
     <td width="1%" height="16">U, F10</td>
     <td width="75%" height="16">マークされたファイル、もしくは選択されたファイルを解凍します。</td>
+  </tr>
+  <tr>
+    <td width="27%" height="16">属性設定</td>
+    <td width="1%" height="16">A, Shift+F1</td>
+    <td width="75%" height="16">マークされたファイル、もしくは選択されたファイルの属性、タイムスタンプ、<b>タグ</b>を設定します。</td>
   </tr>
   <tr>
     <td width="11%" height="48" rowspan="4">クリップボード</td>
@@ -338,14 +348,14 @@
     <td width="75%" height="16"><b>ブックマークディレクトリを開きます。</b></td>
   </tr>
   <tr>
-    <td width="27%" height="16"><b>ファイルリスト作成</b></td>
-    <td width="1%" height="16"><b>Shift+F</b></td>
-    <td width="75%" height="16"><b>現在マークされてるファイル、または選択されいているファイルを含むファイルリストをブックマークに登録します。</b></td>
+    <td width="27%" height="16"><b>仮想ディレクトリ作成</b></td>
+    <td width="1%" height="16"><b>Shift+V</b></td>
+    <td width="75%" height="16"><b>現在マークされてるファイル、または選択されいているファイルを含む仮想ディレクトリをブックマークに登録します。</b></td>
   </tr>
   <tr>
-    <td width="27%" height="16"><b>スマートファイルリスト作成</b></td>
+    <td width="27%" height="16"><b>スマートディレクトリ作成</b></td>
     <td width="1%" height="16"><b>Shift+S</b></td>
-    <td width="75%" height="16"><b>新しいスマートファイルリストをブックマークに登録し、編集画面を表示します。</b></td>
+    <td width="75%" height="16"><b>新しいスマートディレクトリをブックマークに登録し、編集画面を表示します。</b></td>
   </tr>
   <tr>
     <td width="11%" height="64" rowspan="2">編集</td>
