--- a/trunk/src/layout.xml.html
+++ b/trunk/src/layout.xml.html
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<table>
+<table border="1" >
 	<tr>
 		<td vfix="true" hfix="true" fill="both">cross_top_left</td>
 		<td vfix="true" colspan="7">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" fill="horizontal">hor_top_left</td>
 					<td vfix="true" hfix="true">title_left_pad</td>
@@ -34,7 +34,7 @@
 	<tr>
 		<td vfix="true" hfix="true" fill="both">ver_page_left</td>
 		<td vfix="true" hfix="true" fill="horizontal">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" hfix="true" align="left">label_page</td>
 					<td vfix="true" hfix="true" align="left">info_page</td>
@@ -43,7 +43,7 @@
 		</td>					
 		<td vfix="true" hfix="true" fill="both">ver_page_total</td>
 		<td vfix="true" fill="horizontal">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" hfix="true">label_total</td>
 					<td vfix="true" align="right">info_total</td>
@@ -52,7 +52,7 @@
 		</td>
 		<td vfix="true" hfix="true" fill="both">ver_total_used</td>
 		<td vfix="true" fill="horizontal">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" hfix="true">label_used</td>
 					<td vfix="true" align="right">info_used</td>
@@ -61,7 +61,7 @@
 		</td>
 		<td vfix="true" hfix="true" fill="both">ver_used_free</td>
 		<td vfix="true" fill="horizontal">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" hfix="true">label_free</td>
 					<td vfix="true" align="right">info_free</td>
@@ -86,14 +86,14 @@
 	<tr>
 		<td hfix="true" vfix="true" fill="vertical">ver_top_left</td>
 		<td vfix="true" colspan="7">
-			<table>
+			<table border="1" >
 				<tr>
 					<td hfix="true" vfix="true" rowspan="3">pad_top_left</td>
 					<td vfix="true" fill="both" colspan="5">
-						<table>
+						<table border="1" >
 							<tr>
 								<td vfix="true" hfix="true" align="left">label_path</td>
-								<td vfix="true" align="left" prefwidth="1" fill="horizontal">info_path</td>
+								<td vfix="true" align="left" prefwidth="1">info_path</td>
 							</tr>
 						</table>
 					</td>
@@ -101,14 +101,14 @@
 				</tr>
 				<tr>
 					<td vfix="true" hfix="true">label_name</td>
-					<td vfix="true" prefwidth="1" fill="horizontal">info_name</td>
+					<td vfix="true">info_name</td>
 					<td vfix="true" hfix="true" align="right">info_mark</td>
 					<td vfix="true" hfix="true">label_mark</td>
 					<td vfix="true" hfix="true" align="right">info_marksize</td>
 				</tr>	
 				<tr>
 					<td vfix="true" hfix="true">label_info</td>
-					<td vfix="true" prefwidth="1">info_info</td>
+					<td vfix="true">info_info</td>
 					<td vfix="true" hfix="true" align="right">info_filecount</td>
 					<td vfix="true" hfix="true">label_filecount</td>
 					<td vfix="true" hfix="true" align="right">info_filesize</td>
@@ -133,10 +133,10 @@
 
 	<tr>
 		<td vfix="true" colspan="7">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" hfix="true">message_pad</td>
-					<td vfix="true" fill="horizontal" align="left" prefwidth="1">message</td>
+					<td vfix="true" fill="horizontal" align="left">message</td>
 					<td vfix="true" hfix="true">incremental_search_label</td>
 					<td vfix="true" hfix="true">incremental_search_pad</td>
 				</tr>
@@ -147,7 +147,7 @@
 	<tr>
 		<td vfix="true" hfix="true" fill="both">cross_bottom_left</td>
 		<td vfix="true" colspan="7">
-			<table>
+			<table border="1" >
 				<tr>
 					<td vfix="true" fill="horizontal">hor_bottom_left</td>
 					<td vfix="true" hfix="true">functions</td>
